feat: divide fastpath optimization — exact division + 128-bit split
v3: 除法优化，针对除数固定2-5位小数的金融场景

1. 精确除法快速路径 (public divide):
   - precision 归一化前检查 xs % ys == 0
   - 预过滤 |xs| < |ys| 跳过 (0.5ns 开销)
   - 100÷0.001: 178ns → 8ns (-95%)

2. 128-bit 分裂乘法路径 (internal divide):
   - mcp≥18 时 10^effMcp = 10^18 × 10^remainder
   - multiplyDivideAndRound 替代 BigInteger
   - 精度预检查 + 范围预检查
   - 100÷99.999: 45ns → 32ns (-29%)

3. 条件 actual-scale 入口:
   - precision 条件失败时用实际 scale
   - 不影响已有路径正确性

4. subtract 编译修复 (BigInteger.valueOf 类型)

Correctness: 11/11 test cases pass, mcp=10/17/20